<?xml version="1.0"?>
<package>
  <name>mir_visual_servoing</name>
  <version>0.1.0</version>
  <description>visual servoing based on (biggest) blob detection</description>

  <maintainer email="ashok.meenakshi@smail.inf.h-brs.de">Ashok Meenakshi Sundaram</maintainer>
  <maintainer email="matthew.stephen.roscoe@gmail.com">Matthew Roscoe</maintainer>

  <license>GPLv3</license>

  <author email="matthew.stephen.roscoe@gmail.com">Matthew Roscoe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mcr_image_filter</run_depend>
  <run_depend>mcr_blob_detection</run_depend>
  <run_depend>mcr_blob_tracking</run_depend>
  <!-- <run_depend>mcr_image_cartesian_mapper</run_depend> -->
  <run_depend>rostopic</run_depend>
  <run_depend>mcr_manipulation_measurers</run_depend>
  <run_depend>mcr_twist_limiter</run_depend>
  <run_depend>mcr_geometric_relation_monitors</run_depend>
  <run_depend>mcr_twist_demultiplexer</run_depend>
  <run_depend>mcr_twist_controller</run_depend>

  <test_depend>roslaunch</test_depend>

</package>
