<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>mir_ikfast_youbot</name>
  <version>0.0.1</version>
  <description>manipulation related messages, services and actions</description>
  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>
  <license>GPLv3</license>
  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <run_depend>moveit_core</run_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>pluginlib</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf_conversions</build_depend>
  <run_depend>tf_conversions</run_depend>
  <export>
    <moveit_core plugin="${prefix}/youbot_arm_1_moveit_ikfast_plugin_description.xml"/>
  </export>
</package>
