<?xml version="1.0"?>
<package>
  <name>mir_kinematics</name>
  <version>0.0.1</version>
  <description>inverse kinematics for industrial robots.</description>

  <license>GPLv3</license>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>

  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>
  <maintainer email="sven.schneider@h-brs.de">Sven Schneider</maintainer>
  <maintainer email="matthias.fueller@h-brs.de">Matthias Füller</maintainer>
  <maintainer email="rhama.dwiputra@h-brs.de">Rhama Dwiputra</maintainer>
  <maintainer email="nico.hochgeschwender@h-brs.de">Nico Hochgeschwender</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
