<?xml version="1.0"?>
<package>
  <name>mir_arm_cartesian_control</name>
  <version>0.0.1</version>
  <description>launch file for the youbot arm cartesian control</description>

  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>GPLv3</license>

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mcr_arm_cartesian_control</run_depend>

  <test_depend>roslaunch</test_depend>

</package>
