<?xml version="1.0"?>
<package>
  <name>mir_arm_motions</name>
  <version>0.1.0</version>

  <description>
     The package provides launcher for mcr_arm_motions package 
     to use planned motion component for arm motion execution.
  </description>

  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>
  <author email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>mcr_arm_motions</run_depend>

</package>
