<?xml version="1.0"?>
<package>
  <name>mir_arm_relative_motion_control</name>
  <version>0.0.1</version>
  <description>The mir_arm_relative_motion_control package</description>
  
  <maintainer email="shehzad@h-brsu.de">shehzad</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
