<?xml version="1.0"?>
<package>
  <name>mir_arm_relative_motion_control</name>
  <version>0.0.1</version>
  <description>
    Relative motion control interface for a manipulator
  </description>

  <maintainer email="shehzad@h-brsu.de">Shehzad Ahmed</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>

  <test_depend>roslaunch</test_depend>

</package>
